# unify_phone

./: .dockerignore  Dockerfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
src/phone/: __init__.py  config.py  server.py
tests/func/: test_server.py
tests/unit/: test_phone.py
