[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = phone
version = 0.0.1
description = This module standartirise a phone number
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages = phone
package_dir =
    = src
python_requires = >=3.10
install_requires =
    uvicorn
    fastapi

[options.package_data]
phone = py.typed

[options.extras_require]
dev =
    tox==3.25.0
    pytest==7.1.2
    mypy==0.961
    mypy-extensions==0.4.3
    flake8==4.0.1

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
